# md-minimizer

./: .gitignore  README.md  requirements.txt
codes_cpp/: CMakeLists.txt  in.config  main.cpp
codes_python/: create_network.py  visualize_mesh.py
lammps/: create_network.py  generate_data.py  generate_lammps_input.py  in.springs  in.springs_loop  requirements.txt  spring_network.py  springs.py  visualize.py  visualize_mesh.py  visualize_simulation.py
references/: LAMMPS_docs.md  Noguchi24.md
